DDI-Lifecycle/3.2/model/_sources/composite-types/RangeType/index.rst.txt
RangeType
---------

Indicates the range of items expressed as a string, such as an alphabetic range.

Properties
~~~~~~~~~~

.. csv-table::
   :header: "Name","Type","","Description"
   :widths: 15,10,5,100

   "RangeUnit","string","0..1","Specifies the units in the range."
   "MinimumValue",":doc:`/composite-types/RangeValueType/index`","0..1","Minimum value in the range."
   "MaximumValue",":doc:`/composite-types/RangeValueType/index`","0..1","Maximum value in the range."


Item Type Hierarchy
~~~~~~~~~~~~~~~~~~~

* **RangeType**
    * :doc:`/composite-types/RankingRangeType/index`


Relationships
~~~~~~~~~~~~~
The following types reference this type.

* :doc:`/composite-types/CohortType/index`
* :doc:`/composite-types/IncludedCodeType/index`
* :doc:`/composite-types/ScaleDimensionType/index`

.. container:: image

   |stub|

.. |stub| image:: ../../images/RangeType.svg

